Fix overlap issues

--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -104,7 +104,7 @@
 
 .action-header {
   height: 1.813rem;
-  margin: 0.188rem 20.188rem 0 0;
+  margin: 0.188rem 0 0 0;
   font-family: RobotoSlab, 'Open Sans', sans-serif;
   font-size: 1.375rem;
   font-weight: bold;
